[gd_scene format=3 uid="uid://cs0tfmpy3hgfp"]

[ext_resource type="Script" uid="uid://unnq6h6l73c8" path="res://src/ui/start_menu/start_menu.gd" id="1_87wup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u83mf"]
bg_color = Color(0, 0, 0, 0.49803922)

[sub_resource type="Animation" id="Animation_cvkdw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2560, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jobw0"]
resource_name = "end"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4600, -2040), Vector2(-2560, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_udh2q"]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2560, 0), Vector2(-4600, -2040)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87wup"]
_data = {
&"RESET": SubResource("Animation_cvkdw"),
&"end": SubResource("Animation_jobw0"),
&"start": SubResource("Animation_udh2q")
}

[node name="StartMenu" type="Control" unique_id=1465856661 groups=["start_menu"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87wup")
time_after_end_anim = 0.3

[node name="Menu" type="Control" parent="." unique_id=1299576877]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Panel" parent="Menu" unique_id=1458376937]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u83mf")

[node name="StartTextMargin" type="MarginContainer" parent="Menu" unique_id=575761937]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -246.75
offset_top = -131.0
offset_right = 246.75
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 64

[node name="StartText" type="RichTextLabel" parent="Menu/StartTextMargin" unique_id=511824241]
layout_mode = 2
theme_override_constants/outline_size = 24
theme_override_font_sizes/normal_font_size = 48
text = "Press space to start."
fit_content = true

[node name="ControlsContainer" type="VBoxContainer" parent="Menu" unique_id=16139370]
layout_mode = 0
offset_right = 727.0
offset_bottom = 207.0

[node name="ArrowTextMargin" type="MarginContainer" parent="Menu/ControlsContainer" unique_id=1267528122]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32

[node name="ArrowText" type="RichTextLabel" parent="Menu/ControlsContainer/ArrowTextMargin" unique_id=139271359]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 24
theme_override_font_sizes/normal_font_size = 32
text = "Use ← → keys to rotate."
fit_content = true

[node name="SwimTextMargin" type="MarginContainer" parent="Menu/ControlsContainer" unique_id=322898788]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16

[node name="SwimText" type="RichTextLabel" parent="Menu/ControlsContainer/SwimTextMargin" unique_id=656509912]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 24
theme_override_font_sizes/normal_font_size = 32
text = "Press space to swim."
fit_content = true

[node name="DashTextMargin" type="MarginContainer" parent="Menu/ControlsContainer" unique_id=1505073545]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16

[node name="DashText" type="RichTextLabel" parent="Menu/ControlsContainer/DashTextMargin" unique_id=1689817717]
layout_mode = 2
theme_override_constants/outline_size = 24
theme_override_font_sizes/normal_font_size = 32
text = "Press shift to dash."
fit_content = true

[node name="TransitionRect" type="ColorRect" parent="." unique_id=212053413]
visible = false
z_index = 10
layout_mode = 0
offset_left = -2560.0
offset_right = 2560.0
offset_bottom = 2880.0
rotation = -0.7853982
pivot_offset_ratio = Vector2(0.5, 0)
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1656849534]
process_mode = 3
root_node = NodePath("../TransitionRect")
libraries/ = SubResource("AnimationLibrary_87wup")
